@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: eval.h,v 1.155 2008/07/29 11:46:32 c_anthon Exp $
+ * $Id: eval.h,v 1.156 2008/11/11 11:00:55 c_anthon Exp $
  */
 
 #ifndef _EVAL_H_
@@ -541,7 +541,7 @@ getCurrentGammonRates ( float aarRates[ 2 ][ 2 ],
                         float arOutput[], 
                         const TanBoard anBoard,
                         cubeinfo *pci,
-                        evalcontext *pec );
+                        const evalcontext *pec );
 
 extern void
 calculate_gammon_rates( float aarRates[ 2 ][ 2 ],
